--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
-</html>
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+%}
+
+<div class="container">
+  <div class="row">
+    {% for movie in movies %}
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card mb-4">
+        <img src="{{ movie.image_url }}" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">{{ movie.title }}</h5>
+          <p class="card-text">
+            <strong>Year:</strong> {{ movie.year }}<br />
+            <strong>Director:</strong> {{ movie.director }}<br />
+            <strong>Rating:</strong> {{ movie.rating }}<br />
+            <strong>Genre:</strong> {{ movie.genre }}
+          </p>
+          <a href="#" class="btn btn-primary">View Details</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+{% endblock %}
