--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Movie Database</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">Movie Database</a>
         <button
           class="navbar-toggler"
           type="button"
