--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,11 @@
             <strong>Rating:</strong> {{ movie.rating }}<br />
             <strong>Genre:</strong> {{ movie.genre }}
           </p>
-          <a href="#" class="btn btn-primary">View Details</a>
+          <a
+            href="{{ url_for('details', id=movie.id) }}"
+            class="btn btn-primary"
+            >View Details</a
+          >
         </div>
       </div>
     </div>
